// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thought /> renders UI as expected 1`] = `
<textarea
  className="sc-fzozJi gKpFSU"
/>
`;

exports[`<Thought /> renders UI as expected 2`] = `
<textarea
  className="sc-fzpans hIHlBp"
/>
`;

exports[`<Thought /> renders UI as expected 3`] = `
<select
  className="sc-fznyAO hsryoF"
/>
`;
